--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
             height: 100vh;
             margin: 0;
             overflow: hidden;
-            position: relative;
         }
         #timer {
-            font-size: calc(20vmin);
+            font-size: calc(80vmin);
             margin: 0;
             color: var(--timer-color);
             display: flex;
@@ -50,14 +49,9 @@
             height: 100%;
             overflow: hidden;
         }
-        @media (orientation: landscape) {
-            #timer {
-                font-size: calc(35vmin);
-            }
-        }
         .controls {
             position: absolute;
-            top: 10px;
+            bottom: 80px;
             left: 50%;
             transform: translateX(-50%);
             display: flex;
@@ -65,7 +59,6 @@
             gap: 1em;
             width: auto;
             padding: 0 1em;
-            z-index: 1000;
         }
         .controls button {
             font-size: 1em;
@@ -90,12 +83,14 @@
         .settings-popup {
             display: none;
             position: fixed;
-            inset: 0;
-            background-color: rgba(0, 0, 0, 0.8);
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background-color: rgba(0, 0, 0, 0.9);
             justify-content: center;
             align-items: center;
             padding: 1em;
-            z-index: 2000;
+            z-index: 1000;
         }
         .settings-content {
             background-color: #2c2c2c;
@@ -135,35 +130,28 @@
             cursor: pointer;
             width: 100%;
         }
-        /* Install prompt styles for iOS */
-        #ios-install-prompt {
-            display: none;
-            position: fixed;
-            bottom: 10px;
+        /* Install button styles */
+        #install-button {
+            position: absolute;
+            bottom: 140px;
             left: 50%;
             transform: translateX(-50%);
-            background-color: #2c2c2c;
-            color: #fff;
             padding: 10px 20px;
-            border-radius: 5px;
-            z-index: 3000;
-        }
-        #ios-install-prompt button {
-            margin-left: 10px;
-            padding: 5px 10px;
+            font-size: 16px;
             background-color: var(--accent-color);
             color: #fff;
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            display: none; /* Hidden by default */
         }
-        /* Adjust for safe areas on iOS */
-        @supports(padding-bottom: env(safe-area-inset-bottom)) {
+        /* Fullscreen for iPhone Safari */
+        @supports (-webkit-touch-callout: none) {
+            html,
             body {
-                padding-bottom: env(safe-area-inset-bottom);
-            }
-            .controls {
-                top: calc(env(safe-area-inset-top) + 10px);
+                min-height: 100%;
+                max-height: 100%;
+                overflow: hidden;
             }
         }
     </style>
@@ -193,11 +181,8 @@
             </svg>
         </button>
     </div>
-    <!-- iOS Install Prompt -->
-    <div id="ios-install-prompt">
-        Install this app on your device: tap <img src="share-icon.png" alt="Share" style="width:16px;height:16px;vertical-align:middle;"> and then 'Add to Home Screen'.
-        <button id="close-ios-prompt">Close</button>
-    </div>
+    <!-- Install button -->
+    <button id="install-button">Install App</button>
     <div class="settings-popup" id="settings-container">
         <div class="settings-content">
             <h3>Settings</h3>
@@ -222,24 +207,38 @@
             });
         }
 
-        // iOS Install Prompt
-        const isiOS = /iphone|ipad|ipod/.test(navigator.userAgent.toLowerCase());
-        const isInStandaloneMode = ('standalone' in window.navigator) && window.navigator.standalone;
-        const iosInstallPrompt = document.getElementById('ios-install-prompt');
-        const closeIosPromptButton = document.getElementById('close-ios-prompt');
+        // Handle the install prompt
+        let deferredPrompt;
+        const installButton = document.getElementById('install-button');
 
-        if (isiOS && !isInStandaloneMode) {
-            iosInstallPrompt.style.display = 'flex';
-        }
+        window.addEventListener('beforeinstallprompt', (e) => {
+            // Prevent the mini-infobar from appearing on mobile
+            e.preventDefault();
+            // Stash the event so it can be triggered later.
+            deferredPrompt = e;
+            // Update UI to notify the user they can install the PWA
+            installButton.style.display = 'block';
+        });
 
-        closeIosPromptButton.addEventListener('click', () => {
-            iosInstallPrompt.style.display = 'none';
+        installButton.addEventListener('click', (e) => {
+            // Hide the install button
+            installButton.style.display = 'none';
+            // Show the install prompt
+            deferredPrompt.prompt();
+            // Wait for the user to respond to the prompt
+            deferredPrompt.userChoice.then((choiceResult) => {
+                if (choiceResult.outcome === 'accepted') {
+                    console.log('User accepted the install prompt');
+                } else {
+                    console.log('User dismissed the install prompt');
+                }
+                deferredPrompt = null;
+            });
         });
 
         let timer;
         let remainingTime;
         let isPaused = true;
-        let countingUp = false;
         const timerDisplay = document.getElementById('timer');
         const startButton = document.getElementById('start');
         const pauseButton = document.getElementById('pause');
@@ -252,15 +251,9 @@
         const timerColorInput = document.getElementById('timerColor');
 
         function updateDisplay(seconds) {
-            const absSeconds = Math.abs(seconds);
-            const minutes = Math.floor(absSeconds / 60);
-            const remainderSeconds = absSeconds % 60;
-            const timeString = `${minutes < 10 ? '0' : ''}${minutes}:${remainderSeconds < 10 ? '0' : ''}${remainderSeconds}`;
-            if (seconds >= 0) {
-                timerDisplay.textContent = timeString;
-            } else {
-                timerDisplay.textContent = `+${timeString}`;
-            }
+            const minutes = Math.floor(seconds / 60);
+            const remainderSeconds = seconds % 60;
+            timerDisplay.textContent = `${minutes < 10 ? '0' : ''}${minutes}:${remainderSeconds < 10 ? '0' : ''}${remainderSeconds}`;
         }
 
         function startTimer() {
@@ -269,16 +262,13 @@
                 remainingTime = remainingTime ?? seconds;
                 isPaused = false;
                 timer = setInterval(() => {
-                    if (remainingTime <= 0 && !countingUp) {
-                        countingUp = true;
-                        remainingTime = 0;
+                    if (remainingTime <= 0) {
+                        clearInterval(timer);
                         navigator.vibrate(500);
-                    } else if (!countingUp) {
-                        remainingTime--;
                     } else {
                         remainingTime--;
+                        updateDisplay(remainingTime);
                     }
-                    updateDisplay(remainingTime);
                 }, 1000);
                 preventScreenSleep();
             }
@@ -291,7 +281,6 @@
 
         function resetTimer() {
             isPaused = true;
-            countingUp = false;
             clearInterval(timer);
             remainingTime = parseInt(timeInput.value);
             updateDisplay(remainingTime);
